# phasex-dev

./: AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  README  TODO  TODO.new  aclocal.m4  changelog.html  config.h.in  configure  configure.ac  features.html  index.html  phasex.spec.in  style.css
debian/: changelog  control  copyright  docs  phasex.desktop  rules
doc/: ROADMAP
help/: parameters.help
misc/: gtkenginerc  patchbank  phasex.desktop
patches/: arp-factory.phx  arp-filler.phx  basic.phx  bass-01.phx  bass-02.phx  bassy-plucked-lead.phx  crisp-lead.phx  culvert.phx  deep-saws.phx  deep-square.phx  default.phx  dirge.phx  dirty-square-bass.phx  dischord.phx  downtempo-ebm-cheat.phx  dreamy-sines.phx  edgy-swells.phx  electro-lead.phx  fm-warble.phx  glitch.phx  harsh-saw.phx  industrial-chimes.phx  industrial-organ.phx  l-r-swells.phx  low-shaker.phx  mod-detune-square.phx  noise-hat-01.phx  noise-hat-02.phx  ocean.phx  phased-out.phx  pm-detune.phx  pulsations-01.phx  pulsations-02.phx  really-cool.phx  revsaw-stair-lead.phx  saw-bass.phx  sci-fi.phx  sharp-square.phx  simple-arp.phx  simple-organ.phx  (+9 more)
src/: Makefile.am  Makefile.in  bank.c  bank.h  callback.c  callback.h  engine.c  engine.h  filter.c  filter.h  gtkknob.c  gtkknob.h  gtkui.c  gtkui.h  help.c  help.h  jack.c  jack.h  lash.c  lash.h  midi.c  midi.h  param.c  param.h  patch.c  patch.h  phasex.c  phasex.h  settings.c  settings.h  wave.c  wave.h
themes/: Phasex-Light
